--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,7 @@ date: '2019-05-14'
 output:
   xaringan::moon_reader:
     css: xaringan-themer.css
+    lib_dir: libs
     nature:
       ratio: "16:9"
       highlightStyle: github
